<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/services_sugilite_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".services.sugilite.view.SugiliteActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="4"
        android:rowCount="10">

        <Button
            android:layout_column="0"
            android:text="@string/start_tracking"
            android:layout_gravity="left"
            android:id="@+id/startTracking"
            android:onClick="startTracking"
            />
        <Button
            android:text="@string/stop_tracking"
            android:layout_gravity="left"
            android:id="@+id/stopTracking"
            android:onClick="stopTracking"
            />

        <Space
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:layout_width="297dp"
            android:layout_height="55dp" />


        <Button
            android:layout_column="0"
            android:text="@string/get_script"
            android:layout_gravity="left"
            android:id="@+id/getScript"
            android:onClick="getScript"
            />
        <EditText
            android:layout_gravity="left"
            android:id="@+id/scriptName"
            android:text="@string/type_script_name"
            android:textColor="@color/dim_foreground_disabled_material_dark"
            android:inputType="text" />


        <Button
            android:layout_column="0"
            android:text="@string/get_scripts"
            android:layout_gravity="left"
            android:id="@+id/getListScripts"
            android:onClick="getListScripts"
            />

        <Space
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:layout_width="297dp"
            android:layout_height="55dp" />


        <TextView
            android:layout_column="0"
            android:text="@string/results"
            android:layout_gravity="left"
            />
        <TextView
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_height="196dp"
            android:layout_columnSpan="4"
            android:id="@+id/resultsTracker"/>
    </GridLayout>

</RelativeLayout>
